# niffy

./: .gitignore  README.md  mix.exs  nif_lib.c
config/: config.exs
lib/: niffy.ex  niffy_test_nif.ex
lib/niffy/: compiler_nif.ex  compiler_server.ex
native/niffy_compilernif/: Cargo.toml  README.md
native/niffy_compilernif/src/: lib.rs
test/: niffy_test.exs
